# ai-code-reviewer

./: .gitignore  DEPLOY.md  README.md  SUBMISSION.md  agents.py  app.py  config.py  evals.py  executor.py  llm.py  pipeline.py  practices.json  pyproject.toml  requirements.txt  retriever.py  selftest.py  snippets.json
.streamlit/: config.toml  secrets.toml.example
ui/: __init__.py  common.py  dashboard.py  live_demo.py  ship.py  sidebar.py
